<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <View
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <ImageView
        android:id="@+id/iv_data_null"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/app_name"
        android:src="@drawable/server_error" />

    <TextView
        android:id="@+id/tv_null_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:gravity="center"
        android:lineSpacingExtra="3dp"
        android:text="@string/def_empty_data_text"
        android:textColor="#8c8c8c"
        android:textSize="14sp" />

    <Button
        android:id="@+id/btn_null"
        android:layout_width="150dp"
        android:layout_height="41dp"
        android:layout_marginTop="50dp"
        android:background="@color/green"
        android:text="@string/def_empty_button_retry"
        android:textColor="@color/white"
        android:textSize="14sp" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="2" />

</LinearLayout>