<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".app.module.main.MainActivity">

    <include android:id="@+id/layout_title" layout="@layout/view_layout_title" />


    <com.allenjuns.wechat.widget.MFViewPager
        android:id="@+id/viewpager"
        android:layout_below="@id/layout_title"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="48dp">
    </com.allenjuns.wechat.widget.MFViewPager>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#ffffff"
        android:orientation="vertical" >

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#D6DCDC"  />

        <com.allenjuns.wechat.widget.DMTabHost
            android:id="@+id/tab_host"
            android:layout_width="match_parent"
            android:layout_height="47dip"
            android:paddingBottom="1dp"
            android:orientation="horizontal" >

            <com.allenjuns.wechat.widget.DMTabButton
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"

                app:drawableTop="@drawable/tab_weixin"
                app:tabtext="@string/app_name" >
            </com.allenjuns.wechat.widget.DMTabButton>

            <com.allenjuns.wechat.widget.DMTabButton
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:drawableTop="@drawable/tab_contact_list"
                app:tabtext="@string/contacts" >
            </com.allenjuns.wechat.widget.DMTabButton>

            <com.allenjuns.wechat.widget.DMTabButton
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:drawableTop="@drawable/tab_find"
                app:tabtext="@string/discover" >
            </com.allenjuns.wechat.widget.DMTabButton>

            <com.allenjuns.wechat.widget.DMTabButton
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:drawableTop="@drawable/tab_profile"
                app:tabtext="@string/me" >
            </com.allenjuns.wechat.widget.DMTabButton>
        </com.allenjuns.wechat.widget.DMTabHost>
    </LinearLayout>

</RelativeLayout>
